--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,11 @@
 body {
     background-color: pink !important;
 }
+
+.main-content h2 {
+    margin-top: 60px !important;
+}
+
+.align-style {
+    margin: auto !important;
+}
